Attribute and Packet Types align with RFCs (#337)
* Attribute and Packet Types align with RFCs